--- a/management-report/markdown/subpage-hb.Rmd
+++ b/management-report/markdown/subpage-hb.Rmd
@@ -74,8 +74,8 @@ est_date4 <- dmy(01042024)
     case_when(sel_fy == extract_fin_year(est_date1) | sel_fy == extract_fin_year(est_date2) | sel_fy == extract_fin_year(est_date3) | sel_fy == extract_fin_year(est_date4) ~
       paste0("",
              "**Please note:** ",
-             "In December 2016, the Scottish Government published a report: 2014-2020 ",
-             "Estimated and Projected Diagnosis Rates for Dementia in Scotland:",
+             "In December 2016, the Scottish Government published a report: ",
+             "Estimated and Projected Diagnosis Rates for Dementia in Scotland: 2014-2020 ",
              "(https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/). ", 
              "For financial years *2021/22*, *2022/23*, *2023/24*, and *2024/25* the rates referenced in ", 
              "the report were used to create national, age specific rates of dementia incidence ",
