--- a/management-report/markdown/subpage-hb.Rmd
+++ b/management-report/markdown/subpage-hb.Rmd
@@ -301,7 +301,7 @@ Row `r if(complete_year == FALSE)"{.hidden}"`
 
 `r ifelse(complete_year == TRUE, "### 12 Months Value Box", "")`
 ```{r 12 Months Value Box, include = complete_year}
-valueBox(if_else(!is.na(pds_rate),paste0(format(round_half_up(pds_rate, 1)), "%"), "NA"), 
+valueBox(if_else(!is.na(pds_rate),paste0(format(round_half_up(pds_rate, 1)), "%"), "-"), 
          caption = glue("of those referred for post-diagnostic support ",
                         "received a minimum of 12 months of support."))
 ```
