--- a/management-report/markdown/subpage-scotland.Rmd
+++ b/management-report/markdown/subpage-scotland.Rmd
@@ -73,8 +73,7 @@ est_date4 <- dmy(01042024)
       paste0("",
              "**Please note:** ",
              "In December 2016, the Scottish Government published a report: ",
-             "Estimated and Projected Diagnosis Rates for Dementia in Scotland: 2014-2020 ",
-             "(https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/). ", 
+             "[Estimated and Projected Diagnosis Rates for Dementia in Scotland: 2014-2020](https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/){target='_blank'}. ", 
              "For financial years *2021/22*, *2022/23*, *2023/24*, and *2024/25* the rates referenced in ", 
              "the report were used to create national, age specific rates of dementia incidence ",
              "per 1,000 population which were then applied to the National Records of ",
